[tool.poetry]
name = "final_Kim_KyeongJe"
version = "0.1.0"
description = "final"
authors = ["KimKyeongJe <kk3466@columbia.edu>"]
license = "MIT"



[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"
python-semantic-release = "^7.7.0"
flake8 = "^3.8.4"
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
